# history

./: LICENSE  README.md  environment.yml  pyproject.toml
data/dev/: casa_grande_kh9mc.txt  casa_grande_kh9pc.txt
data/metadata/casa_grande_aerial/: camera_model_extrinsics.csv
data/metadata/casa_grande_kh9mc/: camera_model_extrinsics.csv
data/metadata/casa_grande_kh9pc/: camera_model_extrinsics.csv
data/metadata/iceland_kh9mc/: camera_model_extrinsics.csv
data/metadata/iceland_kh9pc/: camera_model_extrinsics.csv
history/: cli.py  config.py  default-config.toml  downloader.py  settings.py
history/aspy/: README.md  cli.py
history/spymicmac/: cli.py
notebooks/: preproc_casa_grande_aerial.ipynb  preproc_casa_grande_kh9mc.ipynb  preproc_iceland_aerial.ipynb  preproc_kh9pc.ipynb  tmp.ipynb
src/history/: __init__.py  dataquery.py  preproc_kh9pc.py  utils.py
test/: config.toml
